--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     }
   },
   "dependencies": {
+    "firebase": "^4.5.2",
     "googleapis": "^22.2.0",
     "jquery": "^3.2.1",
     "underscore": "^1.8.3",
