got react-datepicker working

--- a/package.json
+++ b/package.json
@@ -10,11 +10,14 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "babel-plugin-react-css-modules": "^3.3.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "babelify": "^7.3.0",
     "browser-sync": "^2.18.13",
     "browserify": "^14.4.0",
+    "classnames": "^2.2.5",
     "enzyme": "^3.1.0",
     "enzyme-adapter-react-15": "^1.0.1",
     "gulp": "^3.9.1",
@@ -47,6 +50,8 @@
     "firebase": "^4.5.2",
     "googleapis": "^22.2.0",
     "jquery": "^3.2.1",
+    "moment": "^2.19.1",
+    "react-datepicker": "^0.56.0",
     "underscore": "^1.8.3",
     "whatwg-fetch": "^2.0.3"
   }
